# docs/swagger.yaml
@@ -50,6 +50,31 @@ info:
   title: Cumulus3 API
   version: "1.0"
 paths:
+  /base/files/delete/{id}:
+    delete:
+      description: Deletes a file by its ID
+      parameters:
+      - description: File ID
+        in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: File deleted successfully
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Delete a file
+      tags:
+      - files
   /base/files/id/{id}:
     get:
       description: Downloads a file by its old Cumulus ID
